READY FOR MOBILE USING HTML and CSS

--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
                         </div>
                         <div class="info">
                             <h3>LIP GLOSS</h3>
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star 2.png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star 2.png " alt="star">
                             <p>MATT LOOK VIVID MATTE LIPSTICK (TOMATO RED)</p>
                             <p class="price">&#8377 279 <strike>&#8377 595 </strike> <span>35%</span></p>
                         </div>
@@ -137,11 +137,11 @@
                         </div>
                         <div class="info">
                             <h3>LIP GLOSS</h3>
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star 2.png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star 2.png " alt="star">
                             <p>MATT LOOK VIVID MATTE LIPSTICK (TOMATO RED)</p>
                             <p class="price">&#8377 279 <strike>&#8377 595</strike> <span>35%</span></p>
                         </div>
@@ -153,15 +153,15 @@
                             <a href="#"><img src="./Icons/Icons/Home/heart_product.png" alt="heart"></a>
                         </div>
                         <div class="image">
-                            <img src="/images/Lip Gloss.JPG" alt="LIP GLOSS">
+                            <img src="./images/Lip Gloss.JPG" alt="LIP GLOSS">
                         </div>
                         <div class="info">
                             <h3>LIP GLOSS</h3>
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star 2.png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star 2.png " alt="star">
                             <p>MATT LOOK VIVID MATTE LIPSTICK (TOMATO RED)</p>
                             <p class="price">&#8377 279 <strike>&#8377 595</strike> <span>35%</span></p>
                         </div>
@@ -173,15 +173,15 @@
                             <a href="#"><img src="./Icons/Icons/Home/heart_product.png" alt="heart"></a>
                         </div>
                         <div class="image">
-                            <img src="/images/Lip Gloss.JPG" alt="LIP GLOSS">
+                            <img src="./images/Lip Gloss.JPG" alt="LIP GLOSS">
                         </div>
                         <div class="info">
                             <h3>LIP GLOSS</h3>
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star 2.png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star 2.png " alt="star">
                             <p>MATT LOOK VIVID MATTE LIPSTICK (TOMATO RED)</p>
                             <p class="price">&#8377 279 <strike>&#8377 595</strike> <span>35%</span></p>
                         </div>
@@ -225,16 +225,16 @@
                             <a href="#"><img src="./Icons/Icons/Home/heart_product.png" alt="heart"></a>
                         </div>
                         <div class="image">
-                            <img src="/images/Lip Gloss.JPG" alt="LIP GLOSS">
+                            <img src="./images/Lip Gloss.JPG" alt="LIP GLOSS">
                         </div>
                     </div>
                     <div class="info">
                         <h3>LIP GLOSS</h3>
-                        <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                        <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                        <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                        <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                        <img src="/Icons/Icons/Categories/star 2.png " alt="star">
+                        <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                        <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                        <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                        <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                        <img src="./Icons/Icons/Categories/star 2.png " alt="star">
                         <p>MATT LOOK VIVID MATTE LIPSTICK (TOMATO RED)</p>
                         <p class="price">&#8377 279 <strike>&#8377 595</strike> <span>35%</span></p>
                         <p class="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas vel reprehenderit magnam excepturi iste dolores et, cumque incidunt repudiandae libero nisi doloribus natus atque autem dolorum inventore voluptates consectetur culpa.</p>
@@ -248,16 +248,16 @@
                             <a href="#"><img src="./Icons/Icons/Home/heart_product.png" alt="heart"></a>
                         </div>
                         <div class="image">
-                            <img src="/images/Lip Gloss.JPG" alt="LIP GLOSS">
+                            <img src="./images/Lip Gloss.JPG" alt="LIP GLOSS">
                         </div>
                     </div>
                     <div class="info">
                         <h3>LIP GLOSS</h3>
-                        <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                        <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                        <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                        <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                        <img src="/Icons/Icons/Categories/star 2.png " alt="star">
+                        <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                        <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                        <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                        <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                        <img src="./Icons/Icons/Categories/star 2.png " alt="star">
                         <p>MATT LOOK VIVID MATTE LIPSTICK (TOMATO RED)</p>
                         <p class="price">&#8377 279 <strike>&#8377 595</strike> <span>35%</span></p>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas vel reprehenderit magnam excepturi iste dolores et, cumque incidunt repudiandae libero nisi doloribus natus atque autem dolorum inventore voluptates consectetur culpa.</p>
@@ -276,11 +276,11 @@
                     </div>
                     <div class="info">
                         <h3>LIP GLOSS</h3>
-                        <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                        <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                        <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                        <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                        <img src="/Icons/Icons/Categories/star 2.png " alt="star">
+                        <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                        <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                        <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                        <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                        <img src="./Icons/Icons/Categories/star 2.png " alt="star">
                         <p>MATT LOOK VIVID MATTE LIPSTICK (TOMATO RED)</p>
                         <p class="price">&#8377 279 <strike>&#8377 595</strike> <span>35%</span></p>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas vel reprehenderit magnam excepturi iste dolores et, cumque incidunt repudiandae libero nisi doloribus natus atque autem dolorum inventore voluptates consectetur culpa.</p>
@@ -337,15 +337,15 @@
                             <a href="#"><img src="./Icons/Icons/Home/heart_product.png" alt="heart"></a>
                         </div>
                         <div class="image">
-                            <img src="/images/Lip Gloss.JPG" alt="LIP GLOSS">
+                            <img src="./images/Lip Gloss.JPG" alt="LIP GLOSS">
                         </div>
                         <div class="info">
                             <h3>LIP GLOSS</h3>
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star 2.png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star 2.png " alt="star">
                             <p>MATT LOOK VIVID MATTE LIPSTICK(TOMATO RED)</p>
                             <p class="price">&#8377 279 <strike>&#8377 595</strike> <span>35%</span></p>
                         </div>
@@ -357,15 +357,15 @@
                             <a href="#"><img src="./Icons/Icons/Home/heart_product.png" alt="heart"></a>
                         </div>
                         <div class="image">
-                            <img src="/images/Lip Gloss.JPG" alt="LIP GLOSS">
+                            <img src="./images/Lip Gloss.JPG" alt="LIP GLOSS">
                         </div>
                         <div class="info">
                             <h3>LIP GLOSS</h3>
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star 2.png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star 2.png " alt="star">
                             <p>MATT LOOK VIVID MATTE LIPSTICK(TOMATO RED)</p>
                             <p class="price">&#8377 279 <strike>&#8377 595</strike> <span>35%</span></p>
                         </div>
@@ -377,15 +377,15 @@
                             <a href="#"><img src="./Icons/Icons/Home/heart_product.png" alt="heart"></a>
                         </div>
                         <div class="image">
-                            <img src="/images/Lip Gloss.JPG" alt="LIP GLOSS">
+                            <img src="./images/Lip Gloss.JPG" alt="LIP GLOSS">
                         </div>
                         <div class="info">
                             <h3>LIP GLOSS</h3>
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star 2.png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star 2.png " alt="star">
                             <p>MATT LOOK VIVID MATTE LIPSTICK(TOMATO RED)</p>
                             <p class="price">&#8377 279 <strike>&#8377 595</strike> <span>35%</span></p>
                         </div>
@@ -397,15 +397,15 @@
                             <a href="#"><img src="./Icons/Icons/Home/heart_product.png" alt="heart"></a>
                         </div>
                         <div class="image">
-                            <img src="/images/Lip Gloss.JPG" alt="LIP GLOSS">
+                            <img src="./images/Lip Gloss.JPG" alt="LIP GLOSS">
                         </div>
                         <div class="info">
                             <h3>LIP GLOSS</h3>
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                            <img src="/Icons/Icons/Categories/star 2.png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                            <img src="./Icons/Icons/Categories/star 2.png " alt="star">
                             <p>MATT LOOK VIVID MATTE LIPSTICK(TOMATO RED)</p>
                             <p class="price">&#8377 279 <strike>&#8377 595</strike> <span>35%</span></p>
                         </div>
@@ -459,11 +459,11 @@
                         sequi excepturi consequuntur incidunt architecto, eum explicabo doloremque earum nulla? Ipsam, rerum.</p>
                     <h3>John Baldesari</h3>
                     <p>XyZ.com</p>
-                    <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                    <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                    <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                    <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                    <img src="/Icons/Icons/Categories/star 2.png " alt="star">
+                    <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                    <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                    <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                    <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                    <img src="./Icons/Icons/Categories/star 2.png " alt="star">
 
                 </div>
             </div>
@@ -474,11 +474,11 @@
                         sequi excepturi consequuntur incidunt architecto, eum explicabo doloremque earum nulla? Ipsam, rerum.</p>
                     <h3>John Baldesari</h3>
                     <p>XyZ.com</p>
-                    <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                    <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                    <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                    <img src="/Icons/Icons/Categories/star (1).png " alt="star">
-                    <img src="/Icons/Icons/Categories/star 2.png " alt="star">
+                    <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                    <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                    <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                    <img src="./Icons/Icons/Categories/star (1).png " alt="star">
+                    <img src="./Icons/Icons/Categories/star 2.png " alt="star">
 
                 </div>
             </div>
