READY FOR MOBILE USING HTML and CSS

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <a href="#"><img src="./Icons/Icons/Home/heart_product.png" alt="heart"></a>
                         </div>
                         <div class="image">
-                            <img src="/images/Lip Gloss.JPG" alt="LIP GLOSS">
+                            <img src="./images/Lip Gloss.JPG" alt="LIP GLOSS">
                         </div>
                         <div class="info">
                             <h3>LIP GLOSS</h3>
@@ -133,7 +133,7 @@
                             <a href="#"><img src="./Icons/Icons/Home/heart_product.png" alt="heart"></a>
                         </div>
                         <div class="image">
-                            <img src="/images/Lip Gloss.JPG" alt="LIP GLOSS">
+                            <img src="./images/Lip Gloss.JPG" alt="LIP GLOSS">
                         </div>
                         <div class="info">
                             <h3>LIP GLOSS</h3>
@@ -271,7 +271,7 @@
                             <a href="#"><img src="./Icons/Icons/Home/heart_product.png" alt="heart"></a>
                         </div>
                         <div class="image">
-                            <img src="/images/Lip Gloss.JPG" alt="LIP GLOSS">
+                            <img src="./images/Lip Gloss.JPG" alt="LIP GLOSS">
                         </div>
                     </div>
                     <div class="info">
@@ -430,10 +430,10 @@
         <p>Alienum phaedrum torquatos nec eu, detr periculis ex, nihil expetendis in mei.</p>
         <div class="container">
             <div class="item">
-                <div><img src="./categories/Group 615.png" alt="lipStick"></div>
-                <div><img src="./categories/Group 614.png" alt="makeUp"></div>
-                <div><img src="./categories/Group 613.png" alt="lips"></div>
-                <div><img src="./categories/Group 612.png" alt="eyes"></div>
+                <div><img src="/categories/Group 615.png" alt="lipStick"></div>
+                <div><img src="/categories/Group 614.png" alt="makeUp"></div>
+                <div><img src="/categories/Group 613.png" alt="lips"></div>
+                <div><img src="/categories/Group 612.png" alt="eyes"></div>
             </div>
         </div>
     </div>
@@ -446,7 +446,7 @@
             <div class="heading">
                 <div class="line"></div>
                 <div class="head">
-                    <p>CATEGORIES</p>
+                    <p>Our HAPPY CUSTOMER</p>
                 </div>
                 <div class="line"></div>
             </div>
